--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-input-emoji": "^5.6.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "socket.io-client": "^4.7.2",
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
